--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script>
+  <script src="script/script.js">
     let numberOfChildren = 1;
     let partnerName = "Yreish";
 
