--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>National Geograhic</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Script Practice</title>
 </head>
 <body>
-  <script src="script/script.js">
-    let numberOfChildren = 1;
-    let partnerName = "Yreish";
+  <h1>Student Registration System</h1>
 
-    let partnerLocation = "San Diego, CA"
-    let jobTitle = "Student"
+  <div id="studentInfo" class="student"></div>
+  
+  <button onclick="registerStudent();">Register</button>
 
-    let concat = "You will be a "+ jobTitle+ " in "+ partnerLocation + " and married to "+ partnerName + " with " + numberOfChildren + " kid."
-
-    let number = 100;
-    let anotherNumber = number;
-
-    const car = ["Ford","Chevy","BMW"];
-    document.write('')
-  </script>
+  <script src="script/script2.js"></script>
 </body>
 </html>
