--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Script Practice</title>
 </head>
 <body>
-  <h1>Student Registration System</h1>
+  <h1>Assignment 2 Total Calculator</h1>
 
-  <div id="studentInfo" class="student"></div>
+  <div id="taxcalc" class="calculator"></div>
   
-  <button onclick="registerStudent();">Register</button>
+  <button onclick="priceCalc();">Calculate</button>
 
-  <script src="script/script2.js"></script>
+  <script src="script/script4.js"></script>
 </body>
 </html>
