--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
   </main>
   <footer>
   </footer>
-  <script src="script/calculator.js"></script>
+  <script src="script/calc2.js"></script>
 </body>
 </html>
